--- a/css/fairies.css
+++ b/css/fairies.css
@@ -68,9 +68,8 @@
     transition: opacity .2s linear;
     pointer-events: none;
 
-    opacity: .6;
     border-radius: inherit;
-    background: linear-gradient(0deg, rgba(0, 0, 0, .60) 0%, rgba(0, 0, 0, .60) 100%);
+    background: rgba(0, 0, 0, .60);
 }
 
 
@@ -142,7 +141,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 
-    padding: 7px 23px;
+    padding: 7px 19px;
 
     cursor: pointer;
 
@@ -180,6 +179,8 @@
 
 .fairies .head .filter_btn .btn
 {
+    position: relative;
+
     display: flex;
     align-content: center;
     align-items: center;
@@ -199,6 +200,30 @@
 
     width: 28px;
     height: 28px;
+}
+
+
+.fairies .head .filter_btn .btn span
+{
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 15px;
+
+    position: absolute;
+    top: -2px;
+    right: -7px;
+
+    display: none;
+
+    width: 15px;
+    height: 15px;
+
+    text-align: center;
+    letter-spacing: -.22px;
+
+    color: var(--light_text_color);
+    border-radius: 50%;
+    background: var(--primary_color);
 }
 
 
@@ -599,12 +624,6 @@
     }
 
 
-    .fairies .head .filter_selected > *
-    {
-        padding: 7px 19px;
-    }
-
-
 
     .fairies .row
     {
@@ -713,7 +732,7 @@
 
     .fairies .categories .thumb
     {
-        padding-bottom: 137.614%;
+        min-height: 64px;
     }
 
 
@@ -765,10 +784,18 @@
 
 
     .fairies .head .filter_btn .btn,
-    .fairies .head .sort .btn
+    .fairies .head .sort .btn,
+    .fairies .head .filter_btn .btn .icon,
+    .fairies .head .sort .btn .icon
     {
         width: 24px;
         height: 24px;
+    }
+
+
+    .fairies .head .filter_btn .btn span
+    {
+        display: block;
     }
 
 
