--- a/css/fairy.css
+++ b/css/fairy.css
@@ -87,7 +87,7 @@
     font-family: var(--font_family2);
     font-size: var(--font_size_title_middle);
 
-    padding-right: 48px;
+    padding-right: 96px;
 
     color: #611616;
 }
@@ -106,11 +106,35 @@
     flex-wrap: wrap;
     justify-content: center;
 
-    color: var(--primary_color);
+    color: var(--black_text_color);
 }
 
 
 .fairy_info .favorite_btn .icon
+{
+    width: 32px;
+    height: 32px;
+}
+
+
+.fairy_info .notice
+{
+    position: absolute;
+    z-index: 9;
+    top: 6px;
+    right: 40px;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    color: var(--primary_color);
+}
+
+
+.fairy_info .notice .icon
 {
     width: 32px;
     height: 32px;
@@ -903,7 +927,8 @@
     }
 
 
-    .fairy_info .favorite_btn
+    .fairy_info .favorite_btn,
+    .fairy_info .notice
     {
         top: 2px;
     }
@@ -932,7 +957,8 @@
     }
 
 
-    .fairy_info .favorite_btn
+    .fairy_info .favorite_btn,
+    .fairy_info .notice
     {
         top: 0;
     }
@@ -980,6 +1006,13 @@
     }
 
 
+    .fairy_info .name
+    {
+        padding-right: 88px;
+    }
+
+
+    .fairy_info .notice .icon,
     .fairy_info .favorite_btn .icon
     {
         width: 28px;
