--- a/css/filter.css
+++ b/css/filter.css
@@ -352,6 +352,13 @@
     }
 
 
+    .filter .form .cancel_btn
+    {
+        margin: 0 auto;
+        order: 2;
+    }
+
+
     .filter .form .submit_btn
     {
         width: 100%;
