--- a/css/fairy_reviews.css
+++ b/css/fairy_reviews.css
@@ -1,65 +1,29 @@
 /*-------------------
     Fairy reviews
 -------------------*/
-.fairy_reviews
+.fairy_reviews .block_title
 {
-    padding: 89px 0;
+    font-size: var(--font_size_title_small);
+    font-weight: 400;
 
-    color: var(--light_text_color);
-    background: var(--primary_color);
+    margin-bottom: 59px;
+
+    color: var(--primary_text_color);
 }
 
 
-.fairy_reviews .map
+.fairy_reviews .row
 {
-    position: relative;
-
-    overflow: hidden;
-
-    width: calc(100% - 614px);
-    height: 672px;
-
-    border-radius: 4px;
-    background: #ddd;
+    margin-bottom: -48px;
+    margin-left: -32px;
 }
 
 
-.fairy_reviews .data
+.fairy_reviews .row > *
 {
-    width: 493px;
-    max-width: 100%;
-    margin-left: auto;
-}
-
-
-.fairy_reviews .scroll
-{
-    display: flex;
-    overflow: auto;
-    flex-direction: column;
-
-    height: 592px;
-    padding-right: 21px;
-
-    gap: 32px;
-    overscroll-behavior-y: contain;
-}
-
-
-.fairy_reviews .scroll::-webkit-scrollbar
-{
-    width: 3px;
-    height: 3px;
-
-    border-radius: 20px;
-    background-color: rgba(217, 217, 217, .2);
-}
-
-
-.fairy_reviews .scroll::-webkit-scrollbar-thumb
-{
-    border-radius: 20px;
-    background-color: rgba(217, 217, 217, .4);
+    width: calc(33.333% - 32px);
+    margin-bottom: 48px;
+    margin-left: 32px;
 }
 
 
@@ -70,6 +34,8 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    color: var(--black_text_color);
 }
 
 
@@ -120,6 +86,53 @@
 }
 
 
+.fairy_reviews .review .spoler_btn
+{
+    font-size: var(--font_size_middle);
+    line-height: 120%;
+
+    margin-top: 8px;
+    margin-left: auto;
+
+    text-decoration: underline;
+    letter-spacing: -.6px;
+
+    text-decoration-thickness: 1px;
+}
+
+
+.fairy_reviews .review .spoler_btn span + span,
+.fairy_reviews .review .spoler_btn.active span
+{
+    display: none;
+}
+
+
+.fairy_reviews .review .spoler_btn.active span + span
+{
+    display: inline;
+}
+
+
+
+.fairy_reviews .review .answer
+{
+    display: none;
+
+    width: 100%;
+    margin-top: 32px;
+}
+
+
+.fairy_reviews .review .answer .text
+{
+    padding-left: 19px;
+
+    border-left: 1px solid var(--primary_text_color);
+}
+
+
+
 .fairy_reviews .add_review_btn
 {
     font-size: var(--font_size_middle);
@@ -130,31 +143,41 @@
 
     width: 262px;
     max-width: 100%;
-    margin: 24px auto 0;
-    padding: 16px 32px;
+    margin: 66px auto 0;
+    padding: 15px 31px;
 
+    transition: .2s linear;
     letter-spacing: -.4px;
     text-transform: uppercase;
 
     color: var(--primary_text_color);
+    border: 1px solid var(--primary_text_color);
     background: var(--bg);
 }
 
 
-
-@media print,
-(max-width: 1899px)
+.fairy_reviews .add_review_btn:hover
 {
-    .fairy_reviews
-    {
-        padding: 80px 0;
-    }
+    color: #fff;
+    background: var(--primary_text_color);
+}
 
 
-    .fairy_reviews .map
-    {
-        width: calc(100% - 573px);
-    }
+
+.fairy_reviews .map
+{
+    position: relative;
+
+    overflow: hidden;
+
+    height: 672px;
+    margin-top: 79px;
+
+    border-radius: 4px;
+    background: #ddd;
+
+            filter: url('data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale');
+    -webkit-filter: grayscale(100%);
 }
 
 
@@ -162,22 +185,22 @@
 @media print,
 (max-width: 1439px)
 {
+    .fairy_reviews .block_title
+    {
+        margin-bottom: 48px;
+    }
+
+
+    .fairy_reviews .add_review_btn
+    {
+        margin-top: 60px;
+    }
+
+
     .fairy_reviews .map
     {
-        width: calc(100% - 516px);
         height: 600px;
-    }
-
-
-    .fairy_reviews .data
-    {
-        width: 468px;
-    }
-
-
-    .fairy_reviews .scroll
-    {
-        height: 522px;
+        margin-top: 60px;
     }
 }
 
@@ -186,15 +209,15 @@
 @media print,
 (max-width: 1279px)
 {
-    .fairy_reviews .map
+    .fairy_reviews .block_title
     {
-        width: calc(100% - 472px);
+        margin-bottom: 40px;
     }
 
 
-    .fairy_reviews .data
+    .fairy_reviews .map
     {
-        width: 424px;
+        height: 520px;
     }
 }
 
@@ -203,32 +226,39 @@
 @media print,
 (max-width: 1023px)
 {
-    .fairy_reviews
+    .fairy_reviews .row
     {
-        padding-top: 68px;
+        margin-bottom: -40px;
+        margin-left: 0;
+    }
+
+
+    .fairy_reviews .row > *
+    {
+        width: 100%;
+        margin-bottom: 40px;
+        margin-left: 0;
+    }
+
+
+    .fairy_reviews .review .answer
+    {
+        margin-top: 24px;
+    }
+
+
+    .fairy_reviews .add_review_btn
+    {
+        width: 240px;
+        margin-top: 40px;
+        padding: 12px 24px;
     }
 
 
     .fairy_reviews .map
     {
-        width: 100%;
         height: 440px;
-    }
-
-
-    .fairy_reviews .data
-    {
-        width: 100%;
-        margin-top: 32px;
-    }
-
-
-    .fairy_reviews .scroll
-    {
-        overflow: visible;
-
-        height: auto;
-        padding: 0;
+        margin-top: 40px;
     }
 }
 
@@ -237,13 +267,6 @@
 @media print,
 (max-width: 767px)
 {
-    .fairy_reviews
-    {
-        padding-top: 60px;
-        padding-bottom: 40px;
-    }
-
-
     .fairy_reviews .map
     {
         height: 400px;
