--- a/css/fairies.css
+++ b/css/fairies.css
@@ -403,6 +403,35 @@
 }
 
 
+.fairies .item .remove_btn
+{
+    position: absolute;
+    z-index: 3;
+    top: 16px;
+    right: 16px;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 28px;
+    height: 28px;
+
+    color: var(--light_text_color);
+}
+
+
+.fairies .item .remove_btn .icon
+{
+    display: block;
+
+    width: 100%;
+    height: 100%;
+}
+
+
 .fairies .item .thumb
 {
     position: relative;
