--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,6 +4,18 @@
 @font-face
 {
     font-family: 'Exo 2';
+    font-weight: normal;
+    font-style: normal;
+
+    font-display: swap;
+    src: url('../fonts/Exo2-Regular.woff2') format('woff2'),
+    url('../fonts/Exo2-Regular.woff') format('woff'),
+    url('../fonts/Exo2-Regular.ttf') format('truetype');
+}
+
+@font-face
+{
+    font-family: 'Exo 2';
     font-weight: 500;
     font-style: normal;
 
@@ -11,6 +23,18 @@
     src: url('../fonts/Exo2-Medium.woff2') format('woff2'),
     url('../fonts/Exo2-Medium.woff') format('woff'),
     url('../fonts/Exo2-Medium.ttf') format('truetype');
+}
+
+@font-face
+{
+    font-family: 'Exo 2';
+    font-weight: 600;
+    font-style: normal;
+
+    font-display: swap;
+    src: url('../fonts/Exo2-SemiBold.woff2') format('woff2'),
+    url('../fonts/Exo2-SemiBold.woff') format('woff'),
+    url('../fonts/Exo2-SemiBold.ttf') format('truetype');
 }
 
 
