--- a/css/lk_adding_questionnaire.css
+++ b/css/lk_adding_questionnaire.css
@@ -11,8 +11,867 @@
 
     --form_border_radius: 12px;
     --form_bg_color: rgba(148, 148, 148, .20);
-    --form_placeholder_color: rgba(38, 2, 2, .40);
+    --form_placeholder_color: #a4a4a4;
 }
+
+
+
+.lk_adding_questionnaire .data
+{
+    width: calc(100% - 404px);
+}
+
+
+.lk_adding_questionnaire .data .section
+{
+    display: flex;
+    flex-direction: column;
+
+    gap: 24px;
+}
+
+
+.lk_adding_questionnaire .data .section + .section
+{
+    margin-top: 45px;
+}
+
+
+.lk_adding_questionnaire .data .title
+{
+    font-size: var(--font_size_title_middle);
+    line-height: 120%;
+
+    letter-spacing: -1.2px;
+    text-transform: uppercase;
+
+    color: var(--primary_text_color);
+}
+
+
+.lk_adding_questionnaire .files
+{
+    display: flex;
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    gap: 24px;
+}
+
+
+.lk_adding_questionnaire .uploaded_image
+{
+    position: relative;
+
+    border-radius: 28px;
+}
+
+
+.lk_adding_questionnaire .uploaded_image .remove_btn
+{
+    position: absolute;
+    top: -13px;
+    left: -10px;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 34px;
+    height: 34px;
+
+    color: var(--light_text_color);
+    border-radius: 4px;
+    background: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .uploaded_image .remove_btn svg
+{
+    display: block;
+
+    width: 28px;
+    height: 28px;
+}
+
+
+.lk_adding_questionnaire .uploaded_image .thumb
+{
+    width: 169px;
+    height: 169px;
+
+    border-radius: inherit;
+    background: #ddd;
+}
+
+
+.lk_adding_questionnaire .uploaded_image .thumb img
+{
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: inherit;
+
+    object-fit: cover;
+}
+
+
+.lk_adding_questionnaire .uploaded_video
+{
+    line-height: 120%;
+
+    position: relative;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 359px;
+    max-width: 100%;
+    height: 169px;
+
+    letter-spacing: -.54px;
+
+    color: #444143;
+    border: 1px solid var(--primary_color);
+    border-radius: 28px;
+
+    gap: 38px;
+}
+
+
+.lk_adding_questionnaire .uploaded_video .remove_btn
+{
+    position: absolute;
+    top: -13px;
+    left: -10px;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 34px;
+    height: 34px;
+
+    color: var(--light_text_color);
+    border-radius: 4px;
+    background: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .uploaded_video .remove_btn svg
+{
+    display: block;
+
+    width: 28px;
+    height: 28px;
+}
+
+
+.lk_adding_questionnaire .uploaded_video .icon
+{
+    display: block;
+
+    width: 51px;
+    height: 51px;
+}
+
+
+.lk_adding_questionnaire .uploaded_video .size
+{
+    line-height: 120%;
+
+    margin-top: 12px;
+
+    letter-spacing: -.54px;
+
+    color: rgba(38, 2, 2, .40);
+}
+
+
+.lk_adding_questionnaire .add_file input
+{
+    display: none;
+}
+
+
+.lk_adding_questionnaire .add_file label
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 169px;
+    height: 169px;
+
+    cursor: pointer;
+
+    border: 1px solid var(--primary_color);
+    border-radius: 28px;
+}
+
+
+.lk_adding_questionnaire .add_file label .icon
+{
+    position: relative;
+
+    width: 56px;
+    height: 56px;
+}
+
+
+.lk_adding_questionnaire .add_file label .icon:before,
+.lk_adding_questionnaire .add_file label .icon:after
+{
+    position: absolute;
+
+    display: block;
+
+    width: 100%;
+    height: 4px;
+    margin: auto;
+
+    content: '';
+
+    background: var(--primary_color);
+
+    inset: 0;
+}
+
+
+.lk_adding_questionnaire .add_file label .icon:after
+{
+    width: 4px;
+    height: 100%;
+}
+
+
+.lk_adding_questionnaire .form .columns
+{
+    width: calc(359px + var(--form_columns_offset));
+    max-width: calc(100% + var(--form_columns_offset));
+
+    gap: 24px 0;
+}
+
+
+.lk_adding_questionnaire .form .line
+{
+    margin-bottom: 0;
+}
+
+
+.lk_adding_questionnaire .form .label
+{
+    line-height: 120%;
+
+    width: 359px;
+    max-width: 100%;
+    margin-bottom: 12px;
+
+    letter-spacing: -.54px;
+
+    color: var(--primary_text_color);
+}
+
+
+.lk_adding_questionnaire .form .label.big
+{
+    font-size: var(--font_size_middle);
+    font-weight: 600;
+    line-height: 120%;
+
+    margin-bottom: 24px;
+
+    letter-spacing: -.4px;
+
+    color: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .form .field
+{
+    width: 359px;
+    max-width: 100%;
+}
+
+
+.lk_adding_questionnaire .form .field.big_w
+{
+    width: 100%;
+}
+
+
+.lk_adding_questionnaire .form .field + .field
+{
+    margin-top: 12px;
+}
+
+
+.lk_adding_questionnaire .form .input
+{
+    width: 100%;
+    height: 44px;
+    padding: 0 31px;
+}
+
+
+.lk_adding_questionnaire .form textarea
+{
+    width: 100%;
+    height: 215px;
+    padding: 11px 31px;
+}
+
+
+.lk_adding_questionnaire .form select
+{
+    display: none;
+}
+
+
+.lk_adding_questionnaire .form .nice-select
+{
+    position: relative;
+
+    cursor: pointer;
+}
+
+
+.lk_adding_questionnaire .form .nice-select .current
+{
+    line-height: 120%;
+
+    display: flex;
+    overflow: hidden;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    height: 44px;
+    padding: 0 54px 0 31px;
+
+    cursor: pointer;
+    transition: border-color .2s linear;
+    white-space: nowrap;
+    letter-spacing: -.54px;
+    text-overflow: ellipsis;
+
+    color: var(--form_placeholder_color);
+    border: 1px solid var(--primary_color);
+    border-radius: var(--form_border_radius);
+}
+
+
+.lk_adding_questionnaire .form .nice-select-dropdown
+{
+    position: absolute;
+    z-index: 9;
+    top: 100%;
+    left: 0;
+
+    visibility: hidden;
+    overflow: hidden;
+
+    width: 100%;
+    margin-top: 1px;
+    padding: 7px 7px 7px 0;
+
+    transition: .2s linear;
+    transform: none;
+
+    opacity: 0;
+    border: 1px solid var(--primary_color);
+    border-radius: 12px;
+    background: var(--bg);
+}
+
+.lk_adding_questionnaire .form .nice-select.open .nice-select-dropdown
+{
+    visibility: visible;
+
+    transform: none;
+
+    opacity: 1;
+}
+
+
+.lk_adding_questionnaire .form .nice-select .list
+{
+    overflow: auto;
+
+    max-height: 228px;
+
+    overscroll-behavior-y: contain;
+}
+
+
+.lk_adding_questionnaire .form .nice-select .list::-webkit-scrollbar
+{
+    width: 3px;
+    height: 3px;
+
+    border-radius: 20px;
+    background-color: rgba(97, 22, 22, .08);
+}
+
+
+.lk_adding_questionnaire .form .nice-select .list::-webkit-scrollbar-thumb
+{
+    border-radius: 20px;
+    background-color: rgba(97, 22, 22, .16);
+}
+
+
+.lk_adding_questionnaire .form .nice-select .list .option
+{
+    font-weight: inherit;
+    line-height: normal;
+
+    display: block;
+
+    padding: 8px 31px;
+
+    list-style-type: none;
+
+    cursor: pointer;
+    transition: color .2s linear;
+    white-space: nowrap;
+
+    background: none;
+}
+
+
+.lk_adding_questionnaire .form .nice-select .list .option:empty
+{
+    display: none;
+}
+
+
+.lk_adding_questionnaire .form .arr
+{
+    position: absolute;
+    z-index: 9;
+    top: 0;
+    right: 16px;
+    bottom: 0;
+
+    display: block;
+
+    width: 28px;
+    height: 28px;
+    margin: auto 0;
+
+    pointer-events: none;
+
+    color: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .time_range
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    width: 273px;
+    max-width: 100%;
+
+    gap: 12px;
+}
+
+
+.lk_adding_questionnaire .time_range .field
+{
+    width: calc(50% - 18px);
+}
+
+
+.lk_adding_questionnaire .time_range .nice-select .current
+{
+    padding-left: 17px;
+}
+
+
+.lk_adding_questionnaire .time_range .nice-select .list .option
+{
+    padding-right: 17px;
+    padding-left: 17px;
+}
+
+
+.lk_adding_questionnaire .time_range .sep
+{
+    line-height: 120%;
+
+    letter-spacing: -.54px;
+
+    color: rgba(38, 2, 2, .40);
+}
+
+
+.lk_adding_questionnaire .toggle
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    cursor: pointer;
+}
+
+
+.lk_adding_questionnaire .toggle input
+{
+    display: none;
+}
+
+
+.lk_adding_questionnaire .toggle > div
+{
+    position: relative;
+
+    width: 56px;
+    height: 28px;
+
+    transition: border-color .2s linear;
+
+    border: 1px solid rgba(17, 3, 3, .20);
+    border-radius: 28px;
+}
+
+
+.lk_adding_questionnaire .toggle .ball
+{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 1px;
+
+    width: 24px;
+    height: 24px;
+    margin: auto 0;
+
+    transition: .2s linear;
+
+    border-radius: 50%;
+    background: rgba(17, 3, 3, .20);
+}
+
+
+.lk_adding_questionnaire .toggle input:checked + div
+{
+    border-color: var(--primary_color);
+}
+
+.lk_adding_questionnaire .toggle input:checked + div .ball
+{
+    left: 28px;
+
+    background: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .toggle span
+{
+    line-height: 120%;
+
+    width: calc(100% - 90px);
+
+    cursor: pointer;
+    letter-spacing: -.54px;
+
+    color: var(--primary_text_color);
+}
+
+
+.lk_adding_questionnaire .select2-container
+{
+    display: block;
+
+    width: 100% !important;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    min-height: 44px;
+    padding: 11px 54px 11px 11px;
+
+    border: 1px solid var(--primary_color);
+    border-radius: var(--form_border_radius);
+    background: none;
+
+    gap: 11px;
+}
+
+
+.lk_adding_questionnaire .select2-container .select2-selection--multiple .select2-selection__rendered
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    padding: 0;
+
+    gap: 8px;
+}
+
+
+.lk_adding_questionnaire .select2-container .select2-selection--multiple .select2-selection__rendered:empty
+{
+    display: none;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 5px 12px;
+
+    border: none;
+    border-radius: 12px;
+    background: rgba(148, 148, 148, .20);
+
+    gap: 1px;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__display
+{
+    padding: 0;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__remove
+{
+    position: relative;
+
+    order: 2;
+
+    width: 18px;
+    height: 18px;
+    padding: 0;
+
+    color: var(--primary_color);
+    border: none;
+    background: none;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:before,
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:after
+{
+    position: absolute;
+
+    display: block;
+
+    width: 1px;
+    height: 17px;
+    margin: auto;
+
+    content: '';
+    transform: rotate(-45deg);
+
+    border-radius: 2px;
+    background: currentColor;
+
+    inset: 0;
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:after
+{
+    transform: rotate(45deg);
+}
+
+
+.lk_adding_questionnaire .select2-container--default .select2-selection--multiple .select2-selection__choice__remove span
+{
+    display: none;
+}
+
+
+.select2-dropdown
+{
+    padding: 7px 0;
+
+    border: 1px solid var(--primary_color);
+    border-radius: 12px;
+    background: var(--bg);
+}
+
+
+.select2-results__option
+{
+    line-height: 120%;
+
+    padding: 8px 11px;
+
+    transition: .2s linear;
+    letter-spacing: -.54px;
+
+    color: var(--primary_color);
+}
+
+.select2-container--default .select2-results__option--selected,
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable
+{
+    color: var(--light_text_color);
+    background: var(--primary_color);
+}
+
+
+.lk_adding_questionnaire .select2-container .select2-search--inline .select2-search__field
+{
+    align-self: center;
+
+    height: 22px;
+    margin: 0;
+
+    letter-spacing: 0;
+
+    border-radius: 0;
+}
+
+
+.lk_adding_questionnaire .form .prices .row
+{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    gap: 12px;
+}
+
+.lk_adding_questionnaire .form .prices .row + .row
+{
+    margin-top: 24px;
+}
+
+
+.lk_adding_questionnaire .form .prices .period
+{
+    line-height: 120%;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    align-self: flex-end;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    width: 50px;
+    height: 44px;
+
+    letter-spacing: -.54px;
+
+    color: var(--primary_text_color);
+}
+
+
+.lk_adding_questionnaire .form .prices .input
+{
+    text-align: center;
+}
+
+
+.lk_adding_questionnaire .form .prices .currency
+{
+    line-height: 120%;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    align-self: flex-end;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    height: 44px;
+
+    letter-spacing: -.54px;
+
+    color: var(--primary_text_color);
+}
+
+
+.lk_adding_questionnaire .form .prices .col
+{
+    width: 170px;
+    max-width: 100%;
+}
+
+.lk_adding_questionnaire .form .prices .currency + .col
+{
+    margin-left: 7px;
+}
+
+
+.lk_adding_questionnaire .form .map
+{
+    position: relative;
+
+    overflow: hidden;
+
+    height: 293px;
+    margin-top: 24px;
+
+    border-radius: 10px;
+    background: #ddd;
+}
+
+
+.lk_adding_questionnaire .form .exp
+{
+    line-height: 120%;
+
+    margin-top: 12px;
+
+    letter-spacing: -.54px;
+
+    color: rgba(38, 2, 2, .40);
+}
+
+
+.lk_adding_questionnaire .form .exp a
+{
+    color: var(--primary_color);
+
+    text-decoration-thickness: 1px;
+}
+
 
 
 .lk_adding_questionnaire .preferences
@@ -63,82 +922,6 @@
 }
 
 
-.lk_adding_questionnaire .preferences .toggle
-{
-    display: flex;
-    align-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    cursor: pointer;
-}
-
-
-.lk_adding_questionnaire .preferences .toggle input
-{
-    display: none;
-}
-
-
-.lk_adding_questionnaire .preferences .toggle > div
-{
-    position: relative;
-
-    width: 56px;
-    height: 28px;
-
-    transition: border-color .2s linear;
-
-    border: 1px solid rgba(17, 3, 3, .20);
-    border-radius: 28px;
-}
-
-
-.lk_adding_questionnaire .preferences .toggle .ball
-{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 1px;
-
-    width: 24px;
-    height: 24px;
-    margin: auto 0;
-
-    transition: .2s linear;
-
-    border-radius: 50%;
-    background: rgba(17, 3, 3, .20);
-}
-
-
-.lk_adding_questionnaire .preferences .toggle input:checked + div
-{
-    border-color: var(--primary_color);
-}
-
-.lk_adding_questionnaire .preferences .toggle input:checked + div .ball
-{
-    left: 28px;
-
-    background: var(--primary_color);
-}
-
-
-.lk_adding_questionnaire .preferences .toggle span
-{
-    line-height: 120%;
-
-    width: calc(100% - 90px);
-
-    cursor: pointer;
-    letter-spacing: -.54px;
-
-    color: var(--primary_text_color);
-}
-
-
 .lk_adding_questionnaire .preferences .desc
 {
     display: none;
@@ -160,4 +943,113 @@
     padding: 11px;
 
     letter-spacing: -.54px;
+}
+
+
+
+.lk_adding_questionnaire .form .submit
+{
+    width: 100%;
+    margin-top: 40px;
+}
+
+
+.lk_adding_questionnaire .form .submit_btn
+{
+    width: 316px;
+    max-width: 100%;
+    height: 48px;
+    margin: 0;
+    padding: 12px;
+
+    color: var(--light_text_color);
+    border-color: var(--primary_color);
+    background: var(--primary_color);
+}
+
+
+
+@media print,
+(max-width: 1439px)
+{
+    .lk_adding_questionnaire .data
+    {
+        width: calc(100% - 368px);
+    }
+
+
+    .lk_adding_questionnaire .preferences
+    {
+        width: 320px;
+    }
+}
+
+
+
+@media print,
+(max-width: 1279px)
+{
+    .lk_adding_questionnaire .data
+    {
+        width: 100%;
+    }
+
+
+    .lk_adding_questionnaire .preferences
+    {
+        width: 100%;
+        margin-top: 48px;
+    }
+}
+
+
+
+@media (max-width: 767px)
+{
+    .lk_adding_questionnaire .form .prices .col
+    {
+        width: 157px;
+    }
+
+
+    .lk_adding_questionnaire .form .submit_btn
+    {
+        width: 100%;
+    }
+}
+
+
+
+@media (max-width: 479px)
+{
+    .lk_adding_questionnaire .files
+    {
+        gap: 21px;
+    }
+
+
+    .lk_adding_questionnaire .uploaded_image .remove_btn,
+    .lk_adding_questionnaire .uploaded_video .remove_btn
+    {
+        top: -14px;
+        left: -2px;
+    }
+
+
+    .lk_adding_questionnaire .form .prices .row
+    {
+        gap: 8px;
+    }
+
+
+    .lk_adding_questionnaire .form .prices .row + .row
+    {
+        margin-top: 12px;
+    }
+
+
+    .lk_adding_questionnaire .form .prices .col
+    {
+        width: 127px;
+    }
 }
